--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ SET(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
 SET(DEPS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps")
 
 TARGET_COMPILE_DEFINITIONS(byta PRIVATE
+    $<$<CONFIG:Debug>:_DEBUG>
     $<$<CONFIG:Release>:NDEBUG>)
 
 TARGET_INCLUDE_DIRECTORIES(byta PUBLIC
